added stats apis
