# cmd/server/main.go
@@ -2,6 +2,8 @@ package main
 
 import (
 	"log"
+	// Import net/http for status codes
+	api "url-shortener/generated" // Import the generated package
 	"url-shortener/internal/config"
 	"url-shortener/internal/db"
 	"url-shortener/internal/handlers"
@@ -13,7 +15,6 @@ import (
 )
 
 func main() {
-	//load config
 	gin.SetMode(gin.ReleaseMode)
 	defaultConfig, err := config.LoadConfig("./config.json")
 	if err != nil {
@@ -27,17 +28,22 @@ func main() {
 	defer db.Close()
 
 	pgRepo := repositories.NewURLRepositoryPostgresql(db)
+	urlStatPgRepo := repositories.NewURLStatisticsRepositoryPostgresql(db)
 	idGenerator := utils.NewNanoIDGenerator(6)
 	timeProvider := utils.NewTimeProvider()
-	urlService := services.NewURLService(pgRepo, idGenerator, timeProvider)
-	urlHandler := handlers.NewURLHandler(urlService)
+	urlService := services.NewURLService(pgRepo, urlStatPgRepo, idGenerator, timeProvider)
+	urlStatService := services.NewURLStatsService(urlStatPgRepo)
+
+	// Implement the generated ServerInterface:
+	serverInterface := handlers.NewURLHandler(urlService, urlStatService)
 
 	router := gin.Default()
-	router.POST("/urls", urlHandler.CreateShortUrl)
-	router.GET("/:shortPath", urlHandler.RedirectToLongURL)
-	router.DELETE("/urls/:shortPath", urlHandler.DeleteShortURL)
-	router.PUT("/urls/:shortPath", urlHandler.UpdateShortURL)
-	router.GET("/urls/:shortPath", urlHandler.GetURLDetails)
+	api.RegisterHandlersWithOptions(router, serverInterface, api.GinServerOptions{
+		BaseURL: "", // Or set a base path if needed
+		ErrorHandler: func(c *gin.Context, err error, statusCode int) {
+			c.JSON(statusCode, gin.H{"message": err.Error()}) // Custom error handling
+		},
+	})
 
 	log.Println("Starting server on :" + defaultConfig.Server.Port)
 	router.Run(":" + defaultConfig.Server.Port)
