# internal/models/models.go
@@ -2,33 +2,6 @@ package models
 
 import "time"
 
-/*
-CREATE TABLE IF NOT EXISTS urls (
-
-	short_path VARCHAR(255) PRIMARY KEY NOT NULL,
-	original_url TEXT NOT NULL,
-	expiry TIMESTAMP,
-	created_at TIMESTAMP NOT NULL,
-	created_by VARCHAR(255) NOT NULL,
-	modified_at TIMESTAMP,
-	modified_by VARCHAR(255)
-
-);
-
-CREATE TABLE IF NOT EXISTS urls_archive (
-
-	short_path VARCHAR(255) PRIMARY KEY NOT NULL,
-	original_url TEXT NOT NULL,
-	expiry TIMESTAMP,
-	created_at TIMESTAMP NOT NULL,
-	created_by VARCHAR(255) NOT NULL,
-	modified_at TIMESTAMP,
-	modified_by VARCHAR(255),
-	deleted_at TIMESTAMP,
-	deleted_by VARCHAR(255)
-
-);
-*/
 type URL struct {
 	ShortPath   string     `json:"short_path"`
 	OriginalURL string     `json:"original_url"`
@@ -49,4 +22,11 @@ type URLArchive struct {
 	ModifiedBy  *string    `json:"modified_by"`
 	DeletedAt   *time.Time `json:"deleted_at"`
 	DeletedBy   *string    `json:"deleted_by"`
+}
+
+type URLStatistics struct {
+	ShortPath   string `json:"short_path"`
+	Last24Hours int64  `json:"last_24_hours"`
+	PastWeek    int64  `json:"past_week"`
+	AllTime     int64  `json:"all_time"`
 }
